# discordo

./: .gitignore  CMakeLists.txt  README.md
infra/: Exits.cpp  Loggable.cpp  Utils.cpp
src/: Canal.cpp  Canal.h  CanalTexto.cpp  CanalTexto.h  CanalVoz.cpp  CanalVoz.h  Mensagem.cpp  Mensagem.h  Parser.cpp  Servidor.cpp  Servidor.h  Sistema.cpp  Sistema.h  Usuario.cpp  Usuario.h  constants.cpp  dialogs.cpp  dialogs.h  main.cpp  parser.cpp
src/include/: Canal.h  CanalTexto.h  CanalVoz.h  Constants.h  Dialogs.h  Mensagem.h  Parser.h  Servidor.h  Sistema.h  Usuario.h
